cluster/spark.openshift.rhdp/overlays/spark-history-server/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spark-history-server
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec: {}
