cluster/spark.openshift.rhdp/overlays/spark-history-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server
  namespace: spark-history-server
  labels:
    app: spark-history-server
    component: spark
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 18080
    targetPort: 18080
    protocol: TCP
  selector:
    app: spark-history-server
